build-type:	Simple
cabal-version:	>= 1.6

name:		hssourceinfo
version:	0.0.1
stability:	experimental
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>

license:	BSD3
license-file:	LICENSE

category:	Development
synopsis:	get haskell source code info (now only module dependencies)
description:
  > hsmodtree xturtle/src
  > Graphics.X11.Turtle
  >   + Graphics.X11.TurtleMove
  >   |   + Graphics.X11.TurtleState
  >   |   + Graphics.X11.TurtleField
  >   + Graphics.X11.TurtleInput
  >   |   + Grahpics.X11.TurtleState
  >   + Graphics.X11.TurtleShape

source-repository	head
  type:		git
  location:	git://github.com/YoshikuniJujo/hssourceinfo.git

executable		hsmodtree
  Hs-Source-Dirs:	src
  Main-Is:		hsmodtree.hs
  Build-Depends:	base, containers, directory, regexpr
  Ghc-Options:		-Wall
  Other-Modules:	HsModTree

executable		hscodelines
  Hs-Source-Dirs:	src
  Main-Is:		hscodelines.hs
  Build-Depends:	base, containers, directory, regexpr, filepath
  Ghc-Options:		-Wall
  Other-Modules:	HsModTree
